--- a/bower.json
+++ b/bower.json
@@ -28,14 +28,13 @@
     "iron-icon": "PolymerElements/iron-icon#^0.9.0",
     "paper-input": "PolymerElements/paper-input#^0.9.0",
     "paper-styles": "PolymerElements/paper-styles#^0.9.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
     "polymer": "Polymer/polymer#^0.9.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^0.9.0",
-    "webcomponentsjs": "Polymer/webcomponentsjs#^0.6.0",
     "iron-test-helpers": "PolymerElements/iron-test-helpers#^0.9.0",
     "test-fixture": "PolymerElements/test-fixture#^0.9.0",
-    "web-component-tester": "*"
+    "web-component-tester": "*",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
   }
 }
