--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gold-zip-input",
-  "version": "0.9.3",
+  "version": "0.9.4",
   "description": "An input field for a zip code",
   "authors": [
     "The Polymer Authors"
@@ -25,6 +25,7 @@
   "ignore": [],
   "dependencies": {
     "iron-validator-behavior": "PolymerElements/iron-validator-behavior#^0.9.0",
+    "iron-form-element-behavior": "PolymerElements/iron-form-element-behavior#^0.9.0",
     "iron-icon": "PolymerElements/iron-icon#^0.9.0",
     "paper-input": "PolymerElements/paper-input#^0.9.0",
     "paper-styles": "PolymerElements/paper-styles#^0.9.0",
